--- a/jeux/style.css
+++ b/jeux/style.css
@@ -10,8 +10,6 @@ ul {
     margin: 0;
 }
 
-
-
 header {
     background-color: #2e2d2d;
     color: #bbfcfb;
@@ -29,18 +27,12 @@ header ul {
     gap: 20px;
 }
 
-header li {
-    margin: 0;
-}
-
 header a {
     color: #bbfcfb;
     text-decoration: none;
-    font-size: 16px;
+    font-weight: bold;
     transition: color 0.3s;
-    font-weight: bold; /* Ajouté pour mettre en gras */
 }
-
 
 header a:hover {
     color: #ffffff;
@@ -48,23 +40,54 @@ header a:hover {
 
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6; /* Améliorer la lisibilité du texte */
-    background-color: #000000; /* Couleur de fond pour le body */
-    color: #333; /* Couleur du texte */
-    display: flex; /* Utiliser Flexbox pour centrer le contenu */
-    justify-content: center; /* Centrer horizontalement */
-    align-items: center; /* Centrer verticalement */
-    min-height: 100vh; /* Assurer que le corps prend toute la hauteur de la fenêtre */
-    padding-top: 60px; /* Espacement pour la barre de navigation fixe */
+    background-color: #000000;
+    color: #ffffff;
+    padding-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .container {
-    max-width: 800px; /* Largeur maximale pour le conteneur */
-    width: 100%; /* Assurer que le conteneur utilise toute la largeur disponible jusqu'à la largeur maximale */
-    padding: 20px; /* Espacement intérieur pour le conteneur */
-    background-color: #2e2d2d; /* Fond gris foncé pour le conteneur */
-    border-radius: 8px; /* Coins arrondis */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ombre légère pour donner de la profondeur */
-    text-align: center; /* Centrer le texte à l'intérieur du conteneur */
-    color: #ffffff; /* Couleur du texte pour contraster avec le fond du conteneur */
+    max-width: 800px;
+    width: 100%;
+    padding: 20px;
+    background-color: #2e2d2d;
+    border-radius: 8px;
+    text-align: center;
+}
+
+#game-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.game-card {
+    background-color: #1a1a1a;
+    border-radius: 8px;
+    padding: 10px;
+    width: 200px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.game-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.game-card h2 {
+    font-size: 18px;
+    margin: 10px 0 5px;
+    color: #bbfcfb;
+}
+
+.game-card p {
+    font-size: 14px;
+    margin: 5px 0;
+    color: #cccccc;
 }
