--- a/game/ROCKNITE-ALPHA/style.css
+++ b/game/ROCKNITE-ALPHA/style.css
@@ -55,7 +55,7 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url('https://via.placeholder.com/1920x1080?text=ROCKNITE+ALPHA');
+    background-image: url('https://rocknite-studio.github.io/images/image3.png');
     background-size: cover;
     background-position: center;
     display: flex;
