--- a/game/ROCKNITE-ALPHA/style.css
+++ b/game/ROCKNITE-ALPHA/style.css
@@ -55,7 +55,7 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url('https://rocknite-studio.github.io/images/image3.png');
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://rocknite-studio.github.io/images/image3.png');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -69,7 +69,6 @@ body {
     max-width: 600px;
     color: #fff;
     padding: 20px;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0)); /* Effet de fondu à gauche */
 }
 
 .game-content small {
