--- a/game/ROCKNITE/style.css
+++ b/game/ROCKNITE/style.css
@@ -121,3 +121,21 @@ body {
     background-color: #fff;
     color: #000;
 }
+
+.btnt {
+    display: inline-block;
+    background-color: transparent;
+    border: 2px solid #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btnt:hover {
+    background-color: #fff;
+    color: #000;
+}
