--- a/game/ROCKNITE/style.css
+++ b/game/ROCKNITE/style.css
@@ -103,7 +103,7 @@ body {
     display: flex;
     gap: 20px;
     margin-top: 20px;
-    padding-top: 25px; /* Ajoute un peu de padding pour l'espacement entre le texte et les boutons */
+    padding-top: 20px; /* Ajoute un peu de padding pour l'espacement entre le texte et les boutons */
 }
 
 .btn {
@@ -130,6 +130,7 @@ body {
     border: 2px solid #fff;
     padding: 10px 20px;
     border-radius: 5px;
+    margin-left: 20px;
     color: #fff;
     text-decoration: none;
     font-weight: bold;
