--- a/game/ROCKNITE-ALPHA/style.css
+++ b/game/ROCKNITE-ALPHA/style.css
@@ -130,6 +130,7 @@ body {
     border: 2px solid #fff;
     padding: 10px 20px;
     border-radius: 5px;
+    margin-left: 20px;
     color: #fff;
     text-decoration: none;
     font-weight: bold;
