--- a/jeux/style.css
+++ b/jeux/style.css
@@ -4,22 +4,20 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: #000;
-    color: #fff;
-    font-family: Arial, sans-serif;
-    padding-top: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 header {
     background-color: #2e2d2d;
+    color: #bbfcfb;
     padding: 10px 20px;
+    width: 100%;
     position: fixed;
     top: 0;
-    width: 100%;
+    left: 0;
     z-index: 1000;
 }
 
@@ -27,14 +25,18 @@ header ul {
     display: flex;
     justify-content: center;
     gap: 20px;
-    list-style: none;
+}
+
+header li {
+    margin: 0;
 }
 
 header a {
     color: #bbfcfb;
     text-decoration: none;
-    font-weight: bold;
+    font-size: 16px;
     transition: color 0.3s;
+    font-weight: bold;
 }
 
 header a:hover {
