--- a/SUPPORT/style.css
+++ b/SUPPORT/style.css
@@ -43,6 +43,10 @@ header a:hover {
     color: #ffffff;
 }
 
+p {
+    color: #ffffff;
+}
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
