--- a/game/ROCKNITE-ALPHA/style.css
+++ b/game/ROCKNITE-ALPHA/style.css
@@ -56,7 +56,7 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://rocknite-studio.github.io/images/image3.png');
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://rocknite-studio.github.io/images/rocknite/image3.png');
     background-size: cover;
     background-position: center;
     display: flex;
