--- a/v3/game/MinosEscape/style.css
+++ b/v3/game/MinosEscape/style.css
@@ -17,7 +17,7 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/image1.png');
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/v3/images/image1.png');
     background-size: cover;
     background-position: center;
     display: flex;
